ajustes adicionando upload de imagem